--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
                 <label class="d-block my-1">
                     <b class="my-1">Input your in game name</b>
-                    <input id="inGameName" type="text" class="form-control" placeholder="default name: User">
+                    <input id="inGameName" type="text" class="form-control" placeholder="default name: Player">
                 </label>
                 <label class="d-block my-1">
                     <b class="my-1">How many matches you want to play in competition</b>
@@ -49,7 +49,7 @@
     </div>
     <header class="bg-secondary ">
         <marquee behavior="scroll" direction="left" loops="infininte">
-            <h2 class="bg-secondary py-2 text-center">A RPS Game</h2>
+            <h2 class="bg-secondary py-2 text-center">A R.P.S Game</h2>
         </marquee>
     </header>
     <main>
